# sortphotos

./: README.md  pyproject.toml  setup.py
src/: sortphotos.py
tests/: test_sortphotos.py
