[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sortphotos"
version = "1.0"
description = "Organizes photos and videos into folders using date/time information"
license = "MIT"
requires-python = ">=3.7"

[project.scripts]
sortphotos = "src.sortphotos:main"

